Try new classification ordering